--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>  <img src="src/assets/Imagenes/Logo.png" alt="">  Love Meat</h1>
 
   </header>
+  <script type="module" src="/src/App.jsx"></script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
