--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <h1>  <img src="src/assets/Imagenes/Logo.png" alt="">  Love Meat</h1>
 
   </header>
-  <script type="module" src="/src/App.jsx"></script>
+ <nav>
+  <script type="module" src="/componentes/AppRouter.jsx"></script>
+
+ </nav> 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
