--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Love Meat</title>
   </head>
   <header>
-    <h1>  <img src="src/assets/Imagenes/Logo.png" alt="">  Love Meat</h1>
+    <h1 > <link to="/inicio">  <img src="src/assets/Imagenes/Logo.png"  alt="">  Love Meat</link></h1>
 
   </header>
- <nav>
+  <nav>
   <script type="module" src="/componentes/AppRouter.jsx"></script>
 
- </nav> 
+  </nav> 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
